@@ -217,12 +217,19 @@ the first passing validator in its list.
 
 ``chained_validators`` are validators that are run on the entire
 dictionary after other validation is done (``pre_validators`` are
-applied before the schema validation).  You could actually achieve the
-same thing by using ``All`` with the schema validators (`FieldsMatch
-<class-formencode.validators.FieldsMatch.html>`_ is just another
-validator that can be applied to dictionaries).  In this case
-``validators.FieldsMatch`` checks that the value of the two fields are
-the same (i.e., that the password matches the confirmation).
+applied before the schema validation).  chained_validtors will also
+allow for multiple validators to fail and report to the error_dict
+so, for example, if you have an email_confirm and a password_confirm
+fields and use FieldsMatch on both of them as follows:
+
+    >>> chained_validators [ validators.FieldsMatch('password',
+    ...                     'password_confirm'),
+    ...                     validators.FieldsMatch('email',
+    ...                     'email_confirm') ]
+
+This will leave the error_dict with both password_confirm and
+email_confirm error keys, which is likely the desired behavior
+for web forms.
 
 Since a `Schema <class-formencode.schema.Schema.html>`_ is just
 another kind of validator, you can nest these indefinitely, validating
