@@ -9,6 +9,10 @@ svn trunk
 * Added ``formencode.schema.SimpleFormValidator``, which wraps a
   simple function to make it a validator.
 
+* Changed the use of ``chained_validators`` in Schemas, so that all
+  chained validators get run even when there are previous errors (to
+  detect all the errors).
+
 0.9
 ---
 
